@@ -50,6 +50,7 @@ addSoccerVar('FreeKickMoveDist', 1.5)
 addSoccerVar('GoalKickDist', 1.0)
 addSoccerVar('AutomaticKickOff', false)
 addSoccerVar('WaitBeforeKickOff', 2.0)
+addSoccerVar('AutomaticQuit', true)
 addSoccerVar('BorderSize', 0.0) # prevent complaining about missing variable
 
 # agent parameters
