@@ -1,3 +1,8 @@
+2012-04-07  Hedayat Vatankhah  <hedayat.fwd@gmail.com>
+
+	* plugin/soccer/soccerruleaspect/soccerruleaspect.cpp (SoccerRuleAspect::UpdateGameOver): 
+	- add AutomaticQuit mode to shutdown automatically when the game is over
+
 2012-02-14  Sander van Dijk  <sgvandik@gmail.com>
 
 	* rcssserver3d/main.cpp (Spark): 
